# npminspect

./: Cargo.toml  README.md  report.md
src/: audit.rs  main.rs  tree.rs
